--- a/Seminar 6 - Builder & Adapter/.project
+++ b/Seminar 6 - Builder & Adapter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Seminar 6 - Builder</name>
+	<name>Seminar 6 - Builder &amp; Adapter</name>
 	<comment></comment>
 	<projects>
 	</projects>
